--- a/Server/.env
+++ b/Server/.env
@@ -5,3 +5,6 @@ PORT = 8000
 CONNECTION_STRING = mongodb+srv://pc852180:pUkN8dpH9Td0RTR8@cluster0.ggbxbzo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=Praveen90
 #pUkN8dpH9Td0RTR8
+
+KEY_ID=rzp_test_oWLUkrVaoJLWU0
+KEY_SECRET=IS47GEvXCWrpf7RMY02kIlXK
